fixing spacing

--- a/dev/styles/partials/_teamPage.scss
+++ b/dev/styles/partials/_teamPage.scss
@@ -248,61 +248,6 @@
     margin: 0;
     padding-top: 13px;
 }
-// 940px 768px 480px
-// @media (min-width: 430px) and (max-width: 480px)
-// @media (max-width: 480px) {
-//     .noGames, .noManage {
-//         font-size: .8rem;
-//         margin: 2px;
-//     }
-//     .teamNameDisplay, .upcoming {
-//         font-size: 1.2rem;
-//         margin-bottom: 25px;
-        
-//     }
-//     .noManage {
-//         position: relative;
-//         top: -12px;
-//         right: 118px;
-
-//     }
-    
-//     .welcomeHead {
-//         float: left;
-//         clear: both;
-//         position: relative;
-//         top: 8px;
-//     }
-//     .manageHead {
-//         font-size: 1.2rem;
-//         position: relative;
-//         padding: 8px 5px;
-//         top: auto;
-//         float: left;
-//         margin-top: 16px;
-//         margin-bottom: 8px;
-//     }
-//     .upcoming {
-//         font-size: 1.2 rem;
-//         margin-bottom: 5px;
-//     }
-//     .rsvp p{
-//         font-size: 1.2rem;
-//         margin: 0;
-//         float: left;
-//         width: 40%;
-//         display: inline;
-//     }
-//     .buttonYesNo {
-//         float: right;
-//         width: 40%;
-//     }
-//     .rsvp button {
-//         // transform: translateY(-80%);
-//     }
-
-
-}
 
 
 
